--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -79,6 +79,7 @@
       option_for_china_city: "--%{text}--"
       blank_item_default_show_value: "<p class='car-blank-item'><未设定></p>"
       links_split: ' | '
+      total_count: "总共 %{count} 条记录"
     # 主要用于page header
     controller:
       admins: 后台管理员
