--- a/config/locales/models.zh-CN.yml
+++ b/config/locales/models.zh-CN.yml
@@ -8,6 +8,7 @@
       station: "车检站"
       order: "预约信息"
       faq: "常见问题"
+      uaq: "用户问题"
 
     attributes:
       default: &default
@@ -74,5 +75,11 @@
       faq:
         create_user_id: 创建者
         question: 问题内容
+        answer: 回答内容
+        <<: *default
+      uaq:
+        create_user_id: 提问者
+        question: 问题内容
+        answered_admin_id: 回答者
         answer: 回答内容
         <<: *default
