--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -61,6 +61,8 @@
       header_status_error: "%{code}错误页面"
       post:
         status_error: 当前文章状态下不能完成此操作!
+      captcha_error: 验证码错误!
+        
     confirm:
       delete: 您确定要删除吗？
       forget_password: 忘记密码？
