--- a/config/locales/models.zh-CN.yml
+++ b/config/locales/models.zh-CN.yml
@@ -31,6 +31,7 @@
         last_sign_in_ip: 上次登录IP地址
         remember_me: 记住我
       admin:
+        station: 车检站
         roles: 角色
         <<: *default
         <<: *devise_default
