--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -102,6 +102,7 @@
       stations: 车检站
       faqs: 常见问题
       uaqs: 我的问题
+      order_phones: 电话预约
     devise:
       send_reset_mail: 发送重置密码邮件
       send_unlock_mail: 发送解锁邮件
