--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -106,6 +106,7 @@
       uaqs: 我的问题
       orders: 预约信息
       order_phones: 电话预约
+      order_nets: 网上预约
     devise:
       send_reset_mail: 发送重置密码邮件
       send_unlock_mail: 发送解锁邮件
