--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -8,6 +8,8 @@
       get_authcode: 点击获取手机动态码
       have_question: 我要提问
       answer: 回答
+      print: 打印
+      send_to_phone: 发送信息到手机
       new: 新建
       find: 查询
       clear: 清空
@@ -47,6 +49,7 @@
       updated: "更新成功!"
       deleted: "删除成功!"
       modify_password_success: 密码修改成功，已重新登录！
+      order_success: 恭喜您！您已经预约成功！
       post:
         published: 文章发布成功.
         completed: 文章已经提交,等待审核.
