--- a/config/locales/rails.zh-CN.yml
+++ b/config/locales/rails.zh-CN.yml
@@ -8,6 +8,8 @@ zh-CN:
       # default: ! '%Y年%b%d日 %A %H:%M:%S %Z'
       default: ! '%Y年%b%d日 %H:%M'
       line: ! '%Y-%m-%d %H:%M'
+      ymd: ! '%Y年%b%d日'
+      ymd_line: ! '%Y-%m-%d'
   errors: &errors
     messages:
       blank: 必填项
