--- a/config/locales/models.zh-CN.yml
+++ b/config/locales/models.zh-CN.yml
@@ -70,6 +70,7 @@
         car_number: 车牌号
         owner_name: 车主姓名
         telephone: 预留手机号
+        order_date: 预约检车日期
         order_time: 预约检车时间
         order_no: 预约流水号
         station_id: 预约车检站
