--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -52,6 +52,7 @@
         show: 个人信息
         password: 修改密码
       show_order_no: "查找预约流水号"
+      time_area: 预约数量显示
     notice:
       created: "新建成功!"
       updated: "更新成功!"
@@ -127,6 +128,7 @@
       orders: 预约信息
       order_phones: 电话预约
       order_nets: 网上预约
+      station_settings: 设置中心
     devise:
       send_reset_mail: 发送重置密码邮件
       send_unlock_mail: 发送解锁邮件
@@ -145,3 +147,4 @@
       settings: "设置中心"
       station_base_info: "车检站信息"
       new_order_phone: "新增电话预约"
+      time_area: "预约数量设置"
