--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -50,9 +50,13 @@
       create: 新建
       update: 编辑
       more_info: '查看更多 <i class="fa fa-arrow-circle-right"></i>'
+      password: 修改密码
       personal:
         show: 个人信息
         password: 修改密码
+      back:
+        personal:
+          show: 个人信息
       show_order_no: "查找预约流水号"
       time_area: 预约数量显示
     notice:
