添加了备案号

--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -4,6 +4,8 @@
       front_title: 西安车辆年审网
       back_title: 车审后台管理系统
       back_title_long: 陕西车辆年审网后台管理系统
+      beianhao: 陕ICP备14007986号
+      beian_site: "http://www.miibeian.gov.cn"
     action:
       ## 这里开始是有namespace的actions
       back:
