--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -147,6 +147,7 @@
       map: 地图
       orders_checking: 进行中预约
       orders_history: 历史预约
+      click_to_detail: 点击进入
     prompt:
       car_area: "--地区--"
         
