添加了前台用户修改密码和个人信息的功能

--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -17,6 +17,7 @@
         password: 修改密码
       order_online: 在线预约
       password: 修改密码
+      update_password: 修改密码
       detail: 详细
       missit: 爽约
       car_checked: 按时检车完毕
