--- a/config/locales/devise.zh-CN.yml
+++ b/config/locales/devise.zh-CN.yml
@@ -1,16 +1,16 @@
 zh-CN:
   devise:
     confirmations:
-      confirmed: 您的帐号已经确认，您现在已登录.
+      confirmed: 您的帐号已经确认，请重新登录.
       send_instructions: 几分钟后，您将收到确认帐号的电子邮件.
       send_paranoid_instructions: 如果您的邮箱存在于我们的数据库中，您将收到一封确认账号的邮件.
     failure:
       already_authenticated: 您已经登录.
       inactive: 您还没有激活帐户.
       invalid: 账号或密码错误
-      last_attempt: 
+      last_attempt: 您还有最后一次输入密码的机会，否则账号会被锁定.
       locked: 您的帐号已被锁定.
-      not_found_in_database: 邮箱或密码错误
+      not_found_in_database: 账号或密码错误
       timeout: 您已登录超时，请重新登录.
       unauthenticated: 继续操作前请登录.
       unconfirmed: 继续操作前请先确认您的帐号.
@@ -44,7 +44,7 @@ zh-CN:
     unlocks:
       send_instructions: 几分钟后，您将收到一封解锁帐号的邮件.
       send_paranoid_instructions: 如果您的邮箱存在于我们的数据库中，您将收到一封解锁账号的邮件.
-      unlocked: 您的帐号已成功解锁，您现在已登录.
+      unlocked: 您的帐号已成功解锁，请重新登录.
   errors:
     messages:
       already_confirmed: 已经确认，请重新登录.
