--- a/config/locales/rails.zh-CN.yml
+++ b/config/locales/rails.zh-CN.yml
@@ -20,3 +20,39 @@ zh-CN:
   activerecord:
     errors:
       <<: *errors
+  datetime:
+    distance_in_words:
+      about_x_hours:
+        one: 大约一小时前
+        other: 大约 %{count} 小时前
+      about_x_months:
+        one: 大约一个月前
+        other: 大约 %{count} 个月前
+      about_x_years:
+        one: 大约一年前
+        other: 大约 %{count} 年前
+      almost_x_years:
+        one: 接近一年前
+        other: 接近 %{count} 年前
+      half_a_minute: 半分钟前
+      less_than_x_minutes:
+        one: 不到一分钟前
+        other: 不到 %{count} 分钟前
+      less_than_x_seconds:
+        one: 不到一秒前
+        other: 不到 %{count} 秒前
+      over_x_years:
+        one: 一年多前
+        other: ! '%{count} 年多前'
+      x_days:
+        one: 一天前
+        other: ! '%{count} 天前'
+      x_minutes:
+        one: 一分钟前
+        other: ! '%{count} 分钟前'
+      x_months:
+        one: 一个月前
+        other: ! '%{count} 个月前'
+      x_seconds:
+        one: 一秒前
+        other: ! '%{count} 秒前'
