--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -3,6 +3,7 @@
     site:
       front_title: 车辆年检服务网
       back_title: 车检后台管理系统
+      back_mystation_title: 车检站管理中心
       back_title_long: 车辆年检服务网后台管理系统
       beianhao: 陕ICP备14007986号
       beian_site: "http://www.miibeian.gov.cn"
