--- a/config/locales/view.zh-CN.yml
+++ b/config/locales/view.zh-CN.yml
@@ -160,6 +160,7 @@
       personal: 个人中心
       catagories: 文章分类
       posts: 文章
+      open_cities: 开通城市
       stations: 车检站
       faqs: 常见问题
       uaqs: 我的问题
